# bankid-rs

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: clippy.yml  release.yml  rustfmt.yml  test.yml
examples/: authenticate.rs  sign.rs
src/: client.rs  error.rs  lib.rs  qr.rs  tls.rs
src/config/: mod.rs
src/http/: client.rs  mod.rs
src/model/: authenticate.rs  cancel.rs  collect.rs  mod.rs  sign.rs
tests/: test.rs  test_models.rs
