[package]
name = "bankid"
version = "0.2.0"
authors = ["Nicklas Wallgren <nicklas.wallgren@gmail.com>", "Daniel L <https://github.com/dlq84>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "BankID API SDK"
homepage = "https://github.com/e-identification/bankid-rs"
repository = "https://github.com/e-identification/bankid-rs"
keywords = ["bankid", "api", "sdk"]

[dependencies]
async-trait = { version = "0.1.79", optional = true }
base64 = "0.22.0"
derive_builder = "0.20.0"
maybe-async = "0.2.10"
reqwest = { version = "0.12.3", default-features = false, features = [
  "json",
  "socks",
  "blocking",
], optional = true }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.58"
url = "2.2.2"
pem = "3.0.3"
openssl = { version = "0.10.64", optional = true }
webpki-roots = "0.26.1"
dyn-clone = "1.0.17"
ring = "0.17.7"
hex = "0.4.3"

[dev-dependencies]
env_logger = "0.11.3"
tokio = { version = "1.37", features = ["full"] }
futures = "0.3.5"
rand = "0.8.3"

[features]
default = ["__async", "reqwest/native-tls"]
async = ["__async", "reqwest/native-tls"]
sync = ["__sync", "reqwest/native-tls"]

# Internal features for checking async or sync compilation
__async = ["async-trait"]
__sync = ["maybe-async/is_sync"]

[[example]]
name = "authenticate"
path = "examples/authenticate.rs"

[[example]]
name = "sign"
path = "examples/sign.rs"
